# cpuminer-opt

./: .gitignore  algo-gate-api.h  meson copy.build  meson.build
algo/: meson.build
algo/m7m/: m7m.c
algo/x16/: x16rv2.c
compat/: meson.build
compat/getopt/: meson.build
compat/jansson/: meson.build
compat/pthreads/: meson.build
tests/: diff_tests.cpp  meson.build
