srcs = [
  'argon2/argon2a/argon2a.c',
  'argon2/argon2a/ar2/argon2.c',
  'argon2/argon2a/ar2/opt.c',
  'argon2/argon2a/ar2/cores.c',
  'argon2/argon2a/ar2/ar2-scrypt-jane.c',
  'argon2/argon2a/ar2/blake2b.c',
  'argon2/argon2d/argon2d-gate.c',
  'argon2/argon2d/blake2/blake2b.c',
  'argon2/argon2d/argon2d/argon2.c',
  'argon2/argon2d/argon2d/core.c',
  'argon2/argon2d/argon2d/opt.c',
  'argon2/argon2d/argon2d/argon2d_thread.c',
  'argon2/argon2d/argon2d/encoding.c',
  'blake/sph_blake.c',
  'blake/blake256-hash-4way.c',
  'blake/blake512-hash-4way.c',
  'blake/blake-gate.c',
  'blake/blake.c',
  'blake/blake-4way.c',
  'blake/sph_blake2b.c',
  'blake/sph-blake2s.c',
  'blake/blake2s-hash-4way.c',
  'blake/blake2s.c',
  'blake/blake2s-gate.c',
  'blake/blake2s-4way.c',
  'blake/blake2b-hash-4way.c',
  'blake/blake2b.c',
  'blake/blake2b-gate.c',
  'blake/blake2b-4way.c',
  'blake/blakecoin-gate.c',
  'blake/mod_blakecoin.c',
  'blake/blakecoin.c',
  'blake/blakecoin-4way.c',
  'blake/decred-gate.c',
  'blake/decred.c',
  'blake/decred-4way.c',
  'blake/pentablake-gate.c',
  'blake/pentablake-4way.c',
  'blake/pentablake.c',
  'bmw/sph_bmw.c',
  'bmw/bmw256-hash-4way.c',
  'bmw/bmw512-hash-4way.c',
  'bmw/bmw256.c',
  'bmw/bmw512-gate.c',
  'bmw/bmw512.c',
  'bmw/bmw512-4way.c',
  'cubehash/cubehash_sse2.c',
  'cubehash/cube-hash-2way.c',
  'echo/sph_echo.c',
  'echo/echo-hash-4way.c',
  'echo/aes_ni/hash.c',
  'gost/sph_gost.c',
  'groestl/groestl-gate.c',
  'groestl/groestl512-hash-4way.c',
  'groestl/groestl256-hash-4way.c',
  'groestl/sph_groestl.c',
  'groestl/groestl.c',
  'groestl/groestl-4way.c',
  'groestl/myrgr-gate.c',
  'groestl/myrgr-4way.c',
  'groestl/myr-groestl.c',
  'groestl/aes_ni/hash-groestl.c',
  'groestl/aes_ni/hash-groestl256.c',
  'fugue/sph_fugue.c',
  'fugue/fugue-aesni.c',
  'hamsi/sph_hamsi.c',
  'hamsi/hamsi-hash-4way.c',
  'haval/haval.c',
  'haval/haval-hash-4way.c',
  'hodl/aes.c',
  'hodl/hodl-gate.c',
  'hodl/hodl-wolf.c',
  'hodl/sha512_avx.c',
  'hodl/sha512_avx2.c',
  'jh/sph_jh.c',
  'jh/jh-hash-4way.c',
  'jh/jha-gate.c',
  'jh/jha-4way.c',
  'jh/jha.c',
  'keccak/sph_keccak.c',
  'keccak/keccak.c',
  'keccak/keccak-hash-4way.c',
  'keccak/keccak-4way.c',
  'keccak/keccak-gate.c',
  'keccak/sha3d-4way.c',
  'keccak/sha3d.c',
  'lanehash/lane.c',
  'luffa/luffa_for_sse2.c',
  'luffa/luffa-hash-2way.c',
  'lyra2/lyra2.c',
  'lyra2/sponge.c',
  'lyra2/sponge-2way.c',
  'lyra2/lyra2-hash-2way.c',
  'lyra2/lyra2-gate.c',
  'lyra2/lyra2rev2.c',
  'lyra2/lyra2rev2-4way.c',
  'lyra2/lyra2rev3.c',
  'lyra2/lyra2rev3-4way.c',
  'lyra2/lyra2re.c',
  'lyra2/lyra2z.c',
  'lyra2/lyra2z-4way.c',
  'lyra2/lyra2z330.c',
  'lyra2/lyra2h.c',
  'lyra2/lyra2h-4way.c',
  'lyra2/allium-4way.c',
  'lyra2/allium.c',
  'lyra2/phi2-4way.c',
  'lyra2/phi2.c',
  'm7m/m7m.c',
  'm7m/magimath.cpp',
  'nist5/nist5-gate.c',
  'nist5/nist5-4way.c',
  'nist5/nist5.c',
  'nist5/zr5.c',
  'panama/panama-hash-4way.c',
  'panama/sph_panama.c',
  'quark/quark-gate.c',
  'quark/quark.c',
  'quark/quark-4way.c',
  'quark/anime-gate.c',
  'quark/anime.c',
  'quark/anime-4way.c',
  'quark/hmq1725-gate.c',
  'quark/hmq1725-4way.c',
  'quark/hmq1725.c',
  'qubit/qubit-gate.c',
  'qubit/qubit.c',
  'qubit/qubit-2way.c',
  'qubit/deep-gate.c',
  'qubit/deep-2way.c',
  'qubit/deep.c',
  'ripemd/sph_ripemd.c',
  'ripemd/ripemd-hash-4way.c',
  'ripemd/lbry-gate.c',
  'ripemd/lbry.c',
  'ripemd/lbry-4way.c',
  'scrypt/scrypt.c',
  'scrypt/scrypt-core-4way.c',
  'scrypt/neoscrypt.c',
  'sha/sha256-hash.c',
  'sha/sph_sha2.c',
  'sha/sph_sha2big.c',
  'sha/sha256-hash-4way.c',
  'sha/sha512-hash-4way.c',
  'sha/sha256-hash-opt.c',
  'sha/sha256-hash-2way-ni.c',
  'sha/hmac-sha256-hash.c',
  'sha/hmac-sha256-hash-4way.c',
  'sha/sha256d.c',
  'sha/sha2.c',
  'sha/sha256d-4way.c',
  'sha/sha256t-gate.c',
  'sha/sha256t-4way.c',
  'sha/sha256t.c',
  'sha/sha256q-4way.c',
  'sha/sha256q.c',
  'shabal/sph_shabal.c',
  'shabal/shabal-hash-4way.c',
  'shavite/sph_shavite.c',
  'shavite/sph-shavite-aesni.c',
  'shavite/shavite-hash-2way.c',
  'shavite/shavite-hash-4way.c',
  'shavite/shavite.c',
  'simd/nist.c',
  'simd/vector.c',
  'simd/simd-hash-2way.c',
  'skein/sph_skein.c',
  'skein/skein-hash-4way.c',
  'skein/skein.c',
  'skein/skein-4way.c',
  'skein/skein-gate.c',
  'skein/skein2.c',
  'skein/skein2-4way.c',
  'sm3/sm3.c',
  'sm3/sm3-hash-4way.c',
  'swifftx/swifftx.c',
  'tiger/sph_tiger.c',
  'verthash/verthash-gate.c',
  'verthash/Verthash.c',
  'verthash/fopen_utf8.c',
  'verthash/tiny_sha3/sha3.c',
  'verthash/tiny_sha3/sha3-4way.c',
  'whirlpool/sph_whirlpool.c',
  'whirlpool/whirlpool-hash-4way.c',
  'whirlpool/whirlpool-gate.c',
  'whirlpool/whirlpool.c',
  'whirlpool/whirlpoolx.c',
  'x11/x11-gate.c',
  'x11/x11.c',
  'x11/x11-4way.c',
  'x11/x11gost-gate.c',
  'x11/x11gost.c',
  'x11/x11gost-4way.c',
  'x11/c11-gate.c',
  'x11/c11.c',
  'x11/c11-4way.c',
  'x11/tribus-gate.c',
  'x11/tribus.c',
  'x11/tribus-4way.c',
  'x11/timetravel-gate.c',
  'x11/timetravel.c',
  'x11/timetravel-4way.c',
  'x11/timetravel10-gate.c',
  'x11/timetravel10.c',
  'x11/timetravel10-4way.c',
  'x11/x11evo.c',
  'x11/x11evo-4way.c',
  'x11/x11evo-gate.c',
  'x12/x12-gate.c',
  'x12/x12.c',
  'x12/x12-4way.c',
  'x13/x13-gate.c',
  'x13/x13.c',
  'x13/x13-4way.c',
  'x13/x13sm3-gate.c',
  'x13/x13sm3.c',
  'x13/x13sm3-4way.c',
  'x13/phi1612-gate.c',
  'x13/phi1612.c',
  'x13/phi1612-4way.c',
  'x13/skunk-gate.c',
  'x13/skunk-4way.c',
  'x13/skunk.c',
  'x13/x13bcd-4way.c',
  'x13/x13bcd.c',
  'x14/x14-gate.c',
  'x14/x14.c',
  'x14/x14-4way.c',
  'x14/veltor-gate.c',
  'x14/veltor.c',
  'x14/veltor-4way.c',
  'x14/polytimos-gate.c',
  'x14/polytimos.c',
  'x14/polytimos-4way.c',
  'x14/axiom.c',
  'x15/x15-gate.c',
  'x15/x15.c',
  'x15/x15-4way.c',
  'x16/x16r-gate.c',
  'x16/x16r.c',
  'x16/x16r-4way.c',
  'x16/x16rv2.c',
  'x16/x16rv2-4way.c',
  'x16/x16rt.c',
  'x16/x16rt-4way.c',
  'x16/hex.c',
  'x16/x21s-4way.c',
  'x16/x21s.c',
  'x16/minotaur.c',
  'x17/x17-gate.c',
  'x17/x17.c',
  'x17/x17-4way.c',
  'x17/xevan-gate.c',
  'x17/xevan.c',
  'x17/xevan-4way.c',
  'x17/sonoa-gate.c',
  'x17/sonoa-4way.c',
  'x17/sonoa.c',
  'x22/x22i-4way.c',
  'x22/x22i.c',
  'x22/x22i-gate.c',
  'x22/x25x.c',
  'x22/x25x-4way.c',
  'yescrypt/yescrypt.c',
  'yescrypt/yescrypt-best.c',
  'yespower/yespower-gate.c',
  'yespower/yespower-blake2b.c',
  'yespower/crypto/blake2b-yp.c',
  'yespower/yescrypt-r8g.c',
  'yespower/yespower-opt.c',
]


lib_algos = static_library('algos', srcs, include_directories: ['..'], dependencies: [jansson_dep])
algos_dep = declare_dependency(link_with: lib_algos, include_directories: '.')